--- a/modules/server/src/main/resources/templates/node/system/nginxSetting.html
+++ b/modules/server/src/main/resources/templates/node/system/nginxSetting.html
@@ -50,6 +50,7 @@
         </button>
     </div>
 </form>
+</body>
 <script type="text/javascript"
         th:src="@{${session.jpomProxyPath}+'/static/js/auto-line-number.js?v='+${session.staticCacheTime}}"></script>
 
