节点列表支持筛选

--- a/modules/server/src/main/resources/templates/common/head.html
+++ b/modules/server/src/main/resources/templates/common/head.html
@@ -73,7 +73,8 @@
         const asyncFn = [];
         // 不缓存
         layui.config({
-            version: true
+            version: true,
+            base: '/static/layui/plugin/',
         });
         layui.use(['layer', 'element', 'form', 'table'], function () {
             $ = layui.$;
